# marconi-websocket

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg  setup.py
examples/: test.py
marconi_ws/: driver.py  websocket.py
tests/unit/queues/transport/marconi_ws/: base.py
