[metadata]
name = marconi-websocket
version = 0.1
summary = Websocket transport for Marconi
description-file =
    README.rst
author = Flavio Percoco
author-email = 
home-page = 
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    marconi_ws

[entry_points]
marconi.queues.public.transport =
    marconi_ws = marconi_ws.driver:Driver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = marconi_ws/locale
domain = marconi-websocket

[update_catalog]
domain = marconi-websocket
output_dir = marconi_ws/locale
input_file = marconi_ws/locale/marconi-websocket.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = marconi_ws/locale/marconi-websocket.pot
